-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.729 2010-04-01 00:27:37 remko Exp $
-----------------------------------------------------------------------------------------

2010-03-31	remko
	* configure.ac:		Fixed reversed use off --enable-flock.
	* gmt_init.c, gmt_notunix.h:	Use -DFLOCK to switch file locking on instead of -DNO_LOCK
				to switch it off.

2010-03-29	remko
	* grdview.c:		Fixed bug in parsing of -W[m|c|f] option when color starts with [m|c|f]

2010-03-25	remko
	* gmt_io.c:		GMT_is_a_blank_line saw 't' instead of '\t' as whitespace

2010-03-24	jluis
	* *.c:			In mains that used GMT_sdout, replaced fprintf (stdout, ...) 
				by GMT_fputs () because both forms cannot coexist for >= VC 2005

2010-03-23	pwessel
	* *.c:			Use GMT_LL/PSL_LL to handle 64-bit integers across many OS

2010-03-23	remko
	* pslib.[ch], pslib_inc.h:	Removed pslib_inc.h, now in pslib.c.
				Removed PRINT_SIZE_T macro. Added PSL_LL macro.
	* gmt.h, gmt_notunix.h:	Removed PRINT_SIZE_T macro. Added GMT_LL macro.
	* grdinfo.c:		Removed PRINT_SIZE_T macro.

2010-03-22	pwessel
	* *.[ch]:		Replaced BOOLEAN typedef by using GMT_LONG instead.

2010-03-21	jluis
	* *.c:			In mains, replaced all occurrences of fprintf (GMT_stdout, ...)  by
				fprintf (stdout, ...) so that it compiles under VC 2005 and higher.

2010-03-17	pwessel
	* psxy.c:		The -Sw/W symbols did not handle the azimuth/direction conversions
				properly.
	* psxyz.c:		The -Sw/W machinery mistakenly converted angles to radians before
				passing arguments to the plot functions.

2010-03-15	pwessel
	* gmt_io.c:		Added GMT_io.skip_duplicates [FALSE] to control if consecutive
				records with identical x,y should be skipped.  This is needed
				by programs that uses GMT_sph_inonout, which does not expect to
				find duplicates vertices.
	* gmtselect.c:		Turns skip_duplicates on before reading polygons
	* grdmask.c:		Turns skip_duplicates on before reading polygons